# maptoken_mtg

./: .gitignore  README.md  database.py  label_cards.py  main.py  pyproject.toml  sampler.ipynb  scraper.py  test.ipynb  testing.ipynb
data/: decklist.csv  gonti,_night minister.txt  gonti,_night_minister.csv  narser.txt  samples.parquet
src/: DataConverter.py  DbValidator.py  RequestHandler.py  Scraper.py  db_models.py  helper.py
