[tool.poetry]
name = "mtg-deckbuilder"
version = "0.1.0"
description = "general use package for building mtg decks"
authors = ["agrero <thegrero@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
