[tool.poetry]
name = "mtg-deckbuilder"
version = "0.1.0"
description = "general use package for building mtg decks"
authors = ["agrero <thegrero@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"
pyrchidekt = "^2.1.0"
sqlmodel = "^0.0.24"
fastapi = {extras = ["standard"], version = "^0.116.0"}
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
